# academic_agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  langgraph.json  main.py  prueba1.py  pyproject.toml
.claude/: settings.json
docs/: analisis_recomendaciones_arquitectura_final.md  analisis_y_resultados_proyecto.md  architecture_audit.md  architecture_rules.md  arquitectura_big_picture.md  codebase_map.md  informe_arquitectura_actual_agente.md  informe_base_desarrollo_agente_ia_academico_tesis.md  informe_final_arquitectura_cerrada.md  last_phase.md  mvp_academic_agent_lara.md  personalization_module_technical_notes.md  plan_maestro_refactorizacion_arquitectura.md  plan_refactorizacion_de_chatbot_a_agente_autonomo.md  plan_tecnico_persistencia_recordatorios_seguimiento_replanificacion.md  refactor_phase0_baseline.md  refactor_phase2_report.md  refactor_phase3_report.md  refactor_phase5_report.md  refactor_phase6_report.md  refactor_phase8_report.md  refactor_plan.md  scheduling_phase2_report.md  scheduling_phase3_report.md  scheduling_phase4_report.md  study_planning_phase5_report.md
migrations/: 0001_onboarding_students.sql  0002_recurring_schedule_profiles.sql  0003_langgraph_thread_persistence.sql  0004_personalization_profiles.sql  0005_grant_personalization_permissions.sql  0006_personalization_score_columns.sql  0007_study_planning_profiles.sql  0008_grant_study_planning_permissions.sql  0009_study_plan_instances_and_tracking.sql  0010_reminder_policies_and_dispatches.sql  0011_replan_requests_and_proposals.sql  (+15 more)
(+683 files in other folders)
