[project]
name = "academic-agentai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "openai>=2.20.0",
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "langgraph-api>=0.8.0",
    "langgraph-cli>=0.4.22",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["project_env"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
include = [
    "agents*",
    "auth*",
    "bootstrap*",
    "integrations*",
    "rag*",
    "repositories*",
    "schemas*",
    "services*",
    "utils*",
]
